--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [project]
 name = "isotropic_remesher"
 version = "0.0.1"
@@ -15,4 +18,8 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+  "geometric_tools git+https://github.com/sfcaracciolo/geometric_tools.git",
+  "half_edge git+https://github.com/sfcaracciolo/half_edge.git"
 ]
